# AF_tools

./: ,  .gitignore  README.md  pyproject.toml  requirements.txt
af_tools/: __init__.py  afparser.py  afplotter.py  aftools.py  analyze.py  cli.py  output_types.py  utils.py
af_tools/analysis/: calc_rmsd.py  calc_tm.py  find_interface.py  hbonds.py  structure_tools.py
af_tools/data_types/: __init__.py  af2output.py  af3output.py  afoutput.py  afsample2output.py  colabfold_msa.py
af_tools/outputs/: __init__.py  af2output.py  af3output.py  afoutput.py
tests/: test_af_output.py  test_msa.py  test_pbars.py  test_plotter.py  test_rmsd_tm.py
